--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 * {
     outline: none;
@@ -76,7 +76,7 @@ table {
 }
 
 .member-status {
-    font-size: 18px;
+    font-size: 16px;
 }
 
 footer {
@@ -173,4 +173,22 @@ textarea {
 
 .mark {
     font-weight: bolder;
+}
+
+.left, .right, .center {
+    float: left;
+    width: 33%;
+    padding: 10px;
+    text-align: center;
+}
+.container:after {
+    clear: both;
+}
+.member-box { 
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+#right {
+    float: right;
 }
